--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -73,7 +73,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
       <div class="container">
-          <a class="navbar-brand" href="#">Bunker Top</a>
+          <a class="navbar-brand" href="#">El Búnker S.A.</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
