--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -73,7 +75,9 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
       <div class="container">
-          <a class="navbar-brand" href="#">El Búnker S.A.</a>
+           <a class="navbar-brand" href="#">
+            <img src="{% static 'images/logo.jpg' %}" alt="El Búnker S.A." style="height: 70px;">
+        </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
