--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -69,6 +69,11 @@
       .section-container.active {
           display: block;
       }
+      .card-img-top {
+          width: 100%;
+          height: 200px; /* Ajusta la altura según necesites */
+          object-fit: contain;
+      }
   </style>
 </head>
 <body>
