--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -179,7 +179,7 @@
   <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
            <a class="navbar-brand" href="#">
-              <img src="{% static 'images/logo2.png' %}" alt="Bunker Top" style="height:50px;">
+              <img src="{% static 'images/logo.png' %}" alt="Bunker Top" style="height:50px;">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                   aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
