cambios para movil

--- a/productos/templates/productos/includes/products_list.html
+++ b/productos/templates/productos/includes/products_list.html
@@ -3,7 +3,7 @@
 <div id="destacados" class="section-container active">
 <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/destacados.png' %}" alt="Bunker Top" style="height:150px;">
+                <img src="{% static 'images/destacados.png' %}" alt="Bunker Top" class="responsive-image2">
                 <div class="separator-line"></div>
               </div>
     <div class="row">
@@ -31,7 +31,7 @@
     <div id="ratones" class="sub-section">
              <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/ratones.png' %}" alt="Bunker Top" style="height:100px;">
+                <img src="{% static 'images/ratones.png' %}" alt="Bunker Top" class="responsive-image3">
                 <div class="separator-line"></div>
               </div>
         <div class="row">
@@ -55,7 +55,7 @@
     <div id="mandos" class="sub-section">
         <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/mandos.png' %}" alt="Bunker Top" style="height:100px;">
+                <img src="{% static 'images/mandos.png' %}" alt="Bunker Top" class="responsive-image3">
                 <div class="separator-line"></div>
               </div>
         <div class="row">
@@ -79,7 +79,7 @@
     <div id="teclados" class="sub-section">
         <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/teclados.png' %}" alt="Bunker Top" style="height:100px;">
+                <img src="{% static 'images/teclados.png' %}" alt="Bunker Top" class="responsive-image3">
                 <div class="separator-line"></div>
               </div>
         <div class="row">
@@ -103,7 +103,7 @@
     <div id="cascos" class="sub-section">
         <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/cascos.png' %}" alt="Bunker Top" style="height:100px;">
+                <img src="{% static 'images/cascos.png' %}" alt="Bunker Top" class="responsive-image3">
                 <div class="separator-line"></div>
               </div>
         <div class="row">
@@ -131,7 +131,7 @@
     <div id="fisicos" class="sub-section">
          <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/fisicos.png' %}" alt="Bunker Top" style="height:100px;">
+                <img src="{% static 'images/fisicos.png' %}" alt="Bunker Top" class="responsive-image3">
                 <div class="separator-line"></div>
               </div>
         <div class="row">
@@ -155,7 +155,7 @@
     <div id="digitales" class="sub-section">
           <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/digitales.png' %}" alt="Bunker Top" style="height:100px;">
+                <img src="{% static 'images/digitales.png' %}" alt="Bunker Top" class="responsive-image3">
                 <div class="separator-line"></div>
               </div>
         <div class="row">
@@ -183,7 +183,7 @@
     <div id="consolas" class="sub-section">
           <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/consolas.png' %}" alt="Bunker Top" style="height:100px;">
+                <img src="{% static 'images/consolas.png' %}" alt="Bunker Top" class="responsive-image3">
                 <div class="separator-line"></div>
               </div>
         <div class="row">
@@ -207,7 +207,7 @@
     <div id="pc" class="sub-section">
           <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/pcs.png' %}" alt="Bunker Top" style="height:100px;">
+                <img src="{% static 'images/pcs.png' %}" alt="Bunker Top" class="responsive-image3">
                 <div class="separator-line"></div>
               </div>
         <div class="row">
@@ -231,7 +231,7 @@
     <div id="componentes" class="sub-section">
           <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/componentes.png' %}" alt="Bunker Top" style="height:100px;">
+                <img src="{% static 'images/componentes.png' %}" alt="Bunker Top" class="responsive-image3">
                 <div class="separator-line"></div>
               </div>
         <div class="row">
@@ -257,7 +257,7 @@
 <div id="otros" class="section-container">
       <div class="separator">
                 <div class="separator-line"></div>
-                <img src="{% static 'images/otros.png' %}" alt="Bunker Top" style="height:100px;">
+                <img src="{% static 'images/otros.png' %}" alt="Bunker Top" class="responsive-image3">
                 <div class="separator-line"></div>
               </div>
     <div class="row">
