--- a/productos/templates/productos/includes/navbar.html
+++ b/productos/templates/productos/includes/navbar.html
@@ -1,5 +1,6 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light">
+  <!-- Añadimos un pseudo-elemento para el fondo con position: absolute -->
   <div class="container">
     <a class="navbar-brand" href="#">
       <img src="{% static 'images/logo1.png' %}" alt="Bunker Top" class="responsive-image">
@@ -83,3 +84,4 @@
     </div>
   </div>
 </nav>
+
