fuente nueva navbar

--- a/productos/templates/productos/includes/navbar.html
+++ b/productos/templates/productos/includes/navbar.html
@@ -15,21 +15,7 @@
         <li class="nav-item">
           <a class="nav-link" href="#" data-section="destacados">Destacados</a>
         </li>
-        <!-- Dropdown para Periféricos -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="perifericosDropdown" role="button" data-bs-toggle="dropdown"
-             aria-expanded="false" data-section="perifericos">
-            Periféricos
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="perifericosDropdown">
-            <li><a class="dropdown-item" href="#" data-section="perifericos" data-sub="ratones">Ratones</a></li>
-            <li><a class="dropdown-item" href="#" data-section="perifericos" data-sub="mandos">Mandos</a></li>
-            <li><a class="dropdown-item" href="#" data-section="perifericos" data-sub="teclados">Teclados</a></li>
-            <li><a class="dropdown-item" href="#" data-section="perifericos" data-sub="cascos">Cascos</a></li>
-            <li><a class="dropdown-item" href="#" data-section="perifericos">Ver todos</a></li>
-          </ul>
-        </li>
-        <!-- Dropdown para Videojuegos -->
+               <!-- Dropdown para Videojuegos -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="videojuegosDropdown" role="button" data-bs-toggle="dropdown"
              aria-expanded="false" data-section="videojuegos">
@@ -41,11 +27,26 @@
             <li><a class="dropdown-item" href="#" data-section="videojuegos">Ver todos</a></li>
           </ul>
         </li>
+        <!-- Dropdown para Periféricos -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="perifericosDropdown" role="button" data-bs-toggle="dropdown"
+             aria-expanded="false" data-section="perifericos">
+            Perifericos
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="perifericosDropdown">
+            <li><a class="dropdown-item" href="#" data-section="perifericos" data-sub="ratones">Ratones</a></li>
+            <li><a class="dropdown-item" href="#" data-section="perifericos" data-sub="mandos">Mandos</a></li>
+            <li><a class="dropdown-item" href="#" data-section="perifericos" data-sub="teclados">Teclados</a></li>
+            <li><a class="dropdown-item" href="#" data-section="perifericos" data-sub="cascos">Cascos</a></li>
+            <li><a class="dropdown-item" href="#" data-section="perifericos">Ver todos</a></li>
+          </ul>
+        </li>
+
         <!-- Dropdown para Hardware y Consolas -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="hardwareDropdown" role="button" data-bs-toggle="dropdown"
              aria-expanded="false" data-section="hardware">
-            Hardware y Consolas
+            Hardware
           </a>
           <ul class="dropdown-menu" aria-labelledby="hardwareDropdown">
             <li><a class="dropdown-item" href="#" data-section="hardware" data-sub="consolas">Consolas</a></li>
