--- a/productos/templates/productos/includes/products_list.html
+++ b/productos/templates/productos/includes/products_list.html
@@ -23,7 +23,7 @@
             </div>
             <p class="card-text">{{ producto.descripcion }}</p>
             <div class="btn-container text-center">
-              <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+              <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
             </div>
           </div>
         </div>
@@ -61,7 +61,7 @@
               </div>
               <p class="card-text">{{ producto.descripcion }}</p>
               <div class="btn-container text-center">
-                <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+                <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
               </div>
             </div>
           </div>
@@ -95,7 +95,7 @@
               </div>
               <p class="card-text">{{ producto.descripcion }}</p>
               <div class="btn-container text-center">
-                <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+                <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
               </div>
             </div>
           </div>
@@ -129,7 +129,7 @@
               </div>
               <p class="card-text">{{ producto.descripcion }}</p>
               <div class="btn-container text-center">
-                <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+                <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
               </div>
               <p class="card-text">{{ producto.descripcion }}</p>
               <div class="btn-container text-center">
-                <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+                <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
               </div>
             </div>
           </div>
@@ -201,7 +201,7 @@
               </div>
               <p class="card-text">{{ producto.descripcion }}</p>
               <div class="btn-container text-center">
-                <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+                <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
               </div>
             </div>
           </div>
@@ -235,7 +235,7 @@
               </div>
               <p class="card-text">{{ producto.descripcion }}</p>
               <div class="btn-container text-center">
-                <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+                <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
               </div>
             </div>
           </div>
@@ -273,7 +273,7 @@
               </div>
               <p class="card-text">{{ producto.descripcion }}</p>
               <div class="btn-container text-center">
-                <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+                <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
               </div>
             </div>
           </div>
@@ -307,7 +307,7 @@
               </div>
               <p class="card-text">{{ producto.descripcion }}</p>
               <div class="btn-container text-center">
-                <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+                <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
               </div>
             </div>
           </div>
@@ -341,7 +341,7 @@
               </div>
               <p class="card-text">{{ producto.descripcion }}</p>
               <div class="btn-container text-center">
-                <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+                <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
               </div>
             </div>
           </div>
@@ -377,7 +377,7 @@
             </div>
             <p class="card-text">{{ producto.descripcion }}</p>
             <div class="btn-container text-center">
-              <a href="{{ producto.afiliado_url }}" class="btn btn-outline-dark">Ver producto</a>
+              <a href="{{ producto.afiliado_url }}" target="_blank" rel="noopener noreferrer" class="btn btn-outline-dark">Ver producto</a>
             </div>
           </div>
         </div>
